--- a/views/editarLoc.jade
+++ b/views/editarLoc.jade
@@ -6,12 +6,13 @@ block script
 	script.
 		//alert(!{loc_pref}.coordinates);
 		
-		
-		feature = new ol.Feature({
-			geometry: new ol.geom.Point(!{loc_pref}.coordinates),
-			name: 'Ubicación Preferida'
-		});
-		
-		vectorSource.addFeature(feature);
-	
 		map.addControl(new app.Draw_(false, true));
+		
+		if('!{loc_pref}' != ''){
+			feature = new ol.Feature({
+				geometry: new ol.geom.Point(!{loc_pref}.coordinates),
+				name: 'Ubicación Preferida'
+			});
+			
+			vectorSource.addFeature(feature);
+		}
