--- a/views/map-layout.jade
+++ b/views/map-layout.jade
@@ -30,6 +30,8 @@ html
     script(src='https://raw.githubusercontent.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js')
     // Bootstrap Select
     link(rel="stylesheet" href="/javascripts/plugins/bootstrap-select/dist/css/bootstrap-select.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/css/bootstrap-datepicker.css")
+    
     block link
   body.no-trans
     // header start
