--- a/views/denuncias.jade
+++ b/views/denuncias.jade
@@ -56,10 +56,15 @@ block content
 								+pagination(maxPages-4, 5, page,'/app/denuncias?page=')
 							else
 								+pagination(page-2, 5, page,'/app/denuncias?page=')
+					div(style="clear:both")
+						.input-group
+							.input-group-addon
+								i.fa.fa-search.fa-fw
+							button.btn-default.form-control#buscar Buscar denuncias por...
 					
 		// Contenedor del contenido del perfil
 		.container
-			.row
+			.row#denuncias
 				each denuncia in denuncias
 					hr(style={'margin': '35px 0px 0px 0px'})
 					div(style={'background':'rgba(255,255,255,0.3)', 'padding-top':'20px', 'padding-bottom':'20px'})
@@ -93,8 +98,103 @@ block content
 									i  | 
 									i.fa.fa-tags
 									i  
-									if denuncia.tags != null
-										each tag in denuncia.tags
-											| ##{tag} 
+									if denuncia.tags_ != null
+										each tag in denuncia.tags_
+											| ##{tag.tag} 
 					hr(style={'margin': '0px 0px 20px 0px'})
+block link
+	link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/css/bootstrap-datepicker.css")
+block script
+	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.js")
+	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/locales/bootstrap-datepicker.es.min.js")
+	script.
+		$('#buscar').click(function(event){
+			var html = '<div class="row">' +
+			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon">Título</span>' +
+			'<input class="form-control btn-default" id="titulo" type="text" name="titulo" placeholder="buscar por título..."></input></div></div>' + 
+			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon"><i class="fa fa-tags"></i></span>' +
+			'<input class="form-control btn-default" id="tags" type="text" name="tags" placeholder="contiene el tag..."></input></div></div>' +
+			'<div class="col-lg-6" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-user"></i></span>' +
+			'<input class="form-control btn-default" id="username" type="text" name="username" placeholder="denunciado por..."></input></div></div>' +
+			'<div class="col-lg-6"></div>' +
+			'<div class="col-lg-12"><h4> Denuncias cercanas a...</h4><p> Introduce el centro y el radio de búsqueda. Para saber las coordenadas del centro dirígete a <a href="http://epsg.io/4258/map" target="_blank">http://epsg.io/4258/map</a>. El separador decimal es el punto "." o la coma "," </p></div>' +
+			'<div class="col-lg-4" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-location-arrow"></i></span>' +
+			'<input class="form-control btn-default" id="lat_centro" type="text" name="lat" placeholder="Latitud del centro del buffer"></input></div></div>' +
+			'<div class="col-lg-4" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-location-arrow"></i></span>' +
+			'<input class="form-control btn-default" id="lon_centro" type="text" name="lon" placeholder="Longitud del centro del buffer"></input></div></div>' +
+			'<div class="col-lg-4" style="margin-top: 20px;" ><div class="input-group"><span class="input-group-addon"><i class="fa fa-location-arrow"></i></span>' +
+			'<input class="form-control btn-default" id="radio" type="text" name="username" placeholder="Radio del buffer"></input></div></div>' +
+			'<div class="col-lg-12"><h4> Buscar por fecha</h4><p>Buscar denuncias por fecha</p></div>' +
+			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon"><i class="fa fa-calendar"></i></span>' +
+			'<input  autocomplete="off" class="form-control btn-default datepicker" id="fecha_desde" type="text" name="titulo" placeholder="Desde dd/mm/aaaa"></input></div></div>' + 
+			'<div class="col-lg-6"><div class="input-group"><span class="input-group-addon"><i class="fa fa-calendar"></i></span>' +
+			'<input  autocomplete="off" class="form-control btn-default datepicker" id="fecha_hasta" type="text" name="tags" placeholder="Hasta dd/mm/aaaa"></input></div></div>' +
+			'</div>';
+			BootstrapDialog.show({
+				title: 'Buscar denuncias por...', 
+				message: html,
+				draggable: true,
+				buttons: [{label: 'Cerrar', action: function(dialog){dialog.close();}}, 
+					{label: 'Buscar', action: function(dialog){
+						var data = {};
+						data.titulo = $(dialog.getModalBody()).find('#titulo').val();
+						data.tags = $(dialog.getModalBody()).find('#tags').val();
+						data.username = $(dialog.getModalBody()).find('#username').val(); 
+						data.buffer_centro = $(dialog.getModalBody()).find('#lon_centro').val() + ";;" + $(dialog.getModalBody()).find('#lat_centro').val() ; 
+						data.buffer_radio = $(dialog.getModalBody()).find('#radio').val(); 
+						data.fecha_desde = $(dialog.getModalBody()).find('#fecha_desde').val(); 
+						data.fecha_hasta = $(dialog.getModalBody()).find('#fecha_hasta').val(); 
+						num_denuncias_io.emit('query', data);
+				}}],
+				onshown: function(dialog){ $('.datepicker').datepicker({ format: 'dd/mm/yyyy', language: 'es', todayBtn: true, todayHighlight: true });}
+			});
+		});
+		
+		num_denuncias_io.on('api', function(data){
+			$('#denuncias').empty();
+			data.query.forEach(function(denuncia){
+				var tags = data.query.tags_ || [];
+
+				var imagenes = [];
+				comentarios = [];
 				
+				if(denuncia.comentarios) comentarios = denuncia.comentarios;
+				if(denuncia.imagenes) imagenes = denuncia.imagenes;
+				
+				var imagen = imagenes.length > 0 ? denuncia.imagenes[0].path : 'http://telecapita.org/sites/all/themes/flat/images/thumbnail-default.jpg';
+				
+				var tags_str = '';
+				tags.forEach(function(tag){
+					tags_str += '#' + tag.tag + ' ';
+				});
+				alert(denuncia.titulo);
+				var html = '<hr style="margin: 35px 0px 0px 0px;"></hr>' + 
+				+ '<div style={background:rgba(255,255,255,0.3); padding-top:20px; padding-bottom:20px">' + 
+				+	'<div class="media" style="padding-left:20px; padding-right:20px">' +  
+				+		'<a class="pull-right">' +
+				+			'<img class="media-object img-thumbnail" src="' + imagen + '" style="width : 100px; height : 100px"></img>' +
+				+		'</a>' +
+				+		'<div class="media-body" style="width: 100%; display: inline;">' +
+				+			'<h4 style="float:left" class="media-heading">' + denuncia.titulo + '</h4>' +
+				+			'<p class="text-right">' + denuncia.fecha + '</p>' +		
+				+			'<p class="text-right">Por ' + denuncia.usuario[0].profile.username + '</p>' +		
+				+			'<p class="text-right"><a href="/app/denuncia/' + denuncia.gid + '" class="btn btn-danger">Ver denuncia <i class="fa fa-eye"></i></a></p>' +
+				+			'<div style="max-width:100%; word-break:break-all">' + 
+				+				'<i class="fa fa-comments">  </i>' +
+				+				'<i>' + comentarios.length > 0 ? comentarios.length : 0 + '</i>' +
+				+				'<i></i>' +
+				+				'<i class="fa fa-image">  </i>' +
+				+				'<i>' + imagenes.length > 0 ? imagenes.length : 0 + '</i>' +
+				+				'<i></i>' +
+				+				'<i class="fa fa-tags">  </i>' +
+				+				'<i>' + tags.length == 0 ? 0 : tags_str + '</i>' +
+				+			'</div>' +
+				+		'</div>' + 
+				+	'</div>' + 
+				+'</div>' +
+				+'<hr style="margin: 0px 0px 20px 0px;"></hr>';
+				alert(html)
+				$('#denuncias').append($(html));
+				
+			});
+		})		
