--- a/public/javascripts/plugins/ol3/ol.css
+++ b/public/javascripts/plugins/ol3/ol.css
@@ -1,6 +1,11 @@
+.like_denuncia {
+	bottom: 5.375em;
+  	right: 3.375em;		
+}
+
 .buscar_denuncias {
 	bottom: 5.375em;
-  right: 3.375em;		
+  	right: 3.375em;		
 }
 
 .imagenes_denuncia {
