Falta hacer ligeras modificaciones y fallos

--- a/public/javascripts/plugins/ol3/ol.css
+++ b/public/javascripts/plugins/ol3/ol.css
@@ -1,3 +1,13 @@
+.cql_filter {
+	bottom: 2.5em;
+  	right: 3.375em;		
+}
+
+.bbox_download {
+	bottom: 2.5em;
+  	right: 0.5em;		
+}
+
 .like_denuncia {
 	bottom: 5.375em;
   	right: 3.375em;		
