--- a/views/perfil_otro.jade
+++ b/views/perfil_otro.jade
@@ -1,4 +1,4 @@
-extends layout
+extends layout_sin_cabecera
 block content
 	.section.clearfix.object-non-visible(data-animation-effect='fadeInRightBig')
 		// Header Inicio Perfil +  Nombre Usuario
