--- a/views/layout.jade
+++ b/views/layout.jade
@@ -145,7 +145,7 @@ html
     script(type='text/javascript', src='/javascripts/plugins/jquery.appear.js')
     // JS Principal
     script(type='text/javascript', src='/javascripts/template.js')
-    // Útiles
+    // Útiles para denuncias, notificaciones, acciones
     script(type='text/javascript', src='/javascripts/utils.js')
     // FitText.js
     script(type='text/javascript', src='/javascripts/plugins/jquery.fittext.js')
