--- a/views/denuncia.jade
+++ b/views/denuncia.jade
@@ -7,67 +7,6 @@ block meta
 block link
 	link(rel="stylesheet" href="/stylesheets/carousel.css")
 block panel-lateral
-	#contenido.cd-panel.from-right
-		header.cd-panel-header
-			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") Contenido
-			a.cd-panel-close(href='#0') Close
-		.cd-panel-container
-			.cd-panel-content
-				div(style="background: rgba(0,0,0,0.2); padding: 15 0 0 0px").row
-					.col-lg-4
-						img.img.img-responsive.img-circle(style="width: 80px; height: 80px;" src="#{denuncia.usuario[0].profile.picture}")
-					.col-lg-8
-						h4 denunciado por 
-							span
-								a(href="/app/usuarios/#{denuncia.id_usuario}")
-									| #{denuncia.usuario[0].profile.username}
-					div(style="margin-top: 5px;  clear: both;" class="btn-info text-center") #{denuncia.fecha}
-				h2 #{denuncia.titulo}
-				h4
-					i.fa.fa-eye
-						|  #{denuncia.veces_vista}
-					i  
-					i#likes.fa.fa-thumbs-o-up
-						|  #{denuncia.likes ? denuncia.likes.length : 0}
-					i  
-					i.fa.fa-tags
-					if denuncia.tags_
-						each tag in denuncia.tags_
-							| ##{tag.tag}  
-				div(style="clear: both; margin-top: 20px;") 
-					h4(style="margin-top: 10px") Descripción
-					div(style="word-wrap: break-word;") !{denuncia.descripcion}
-	#comentarios.cd-panel.from-right
-		header.cd-panel-header
-			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") Comentarios
-			a.cd-panel-close(href='#0') Close
-		.cd-panel-container
-			.cd-panel-content
-				if user
-					p Añade un comentario
-					form(id="form_add_comentario" action="/app/denuncia/#{denuncia.gid}/addComentario", method="post")
-						textarea#comentar(name="contenido" rows='3' style={'height':'200px'}).form-control
-						.col-lg-12.input-group.space(style={'margin-top':'5px', 'margin-bottom':'15px'})
-							span.input-group-addon
-								i.fa.fa-comment.fa-fw
-							input.form-control.btn-success(type="submit", value="Comentar")
-				if(denuncia.comentarios)
-					p Contiene #{denuncia.comentarios.length} comentarios
-					each comentario in denuncia.comentarios
-						.col-lg-12.space
-							.row(style={background: 'rgba(0,50,187, 0.1)', padding:'10 5 10 5px'}).form-horizontal.text-center
-								.col-lg-4
-									a(href="/app/usuarios/#{comentario.id_usuario}")
-										img.img-responsive.img-thumbnail.img-circle(src="#{comentario.profile.picture}" style="width: 80px; height: 80px;")
-									p.space
-										a(href="/app/usuarios/#{comentario.id_usuario}") #{comentario.profile.username}
-								.col-lg-8
-									div.btn-warning
-										p #{comentario.fecha}
-									.space
-									| !{comentario.contenido}
-				else
-					p Esta denuncia no contiene comentarios
 	#imagenes.cd-panel.from-right
 		header.cd-panel-header
 			h1(style="margin-top: 0px; color: #55ACEE !important; font-size: 20px;") Imágenes
@@ -111,9 +50,28 @@ block script
 	script.
 		var denuncia = {
 			titulo: '#{denuncia.titulo}',
+			descripcion: '#{denuncia.descripcion}',
 			gid: '#{denuncia.gid}',
-			id_usuario: '#{denuncia.id_usuario}'
+			fecha : '#{denuncia.fecha}',
+			id_usuario: '#{denuncia.id_usuario}',
+			usuario : JSON.parse('!{JSON.stringify(denuncia.usuario[0])}'),
+			veces_vista : '#{denuncia.veces_vista}',
+			likes : JSON.parse('!{JSON.stringify(denuncia.likes)}'),
+			comentarios : JSON.parse('!{JSON.stringify(denuncia.comentarios)}'),
+			imagenes : JSON.parse('!{JSON.stringify(denuncia.imagenes)}'),
+			tags : JSON.parse('!{JSON.stringify(denuncia.tags_)}')
 		};
+
+		var user;
+
+		if('#{user}' == ''){
+			user = undefined;
+		} else {
+			user = JSON.parse('!{JSON.stringify(user)}');
+		}
+
+		console.log(user);
+
 		$('#form_add_comentario').submit(function(){
 			//alert('click');
 			var xhr = new XMLHttpRequest();
@@ -125,9 +83,9 @@ block script
 		});
 		var geojsonDenuncia = JSON.parse('!{JSON.stringify(denuncia.geometria)}'); // geometría del servidor
 		// solo podemos acceder a ella desde este tipo de scripts que tienen un punto al final
-		map.addControl(new app.InfoDenuncia());
-		map.addControl(new app.ImagenesDenuncia());
-		map.addControl(new app.ComentariosDenuncia());
+		map.addControl(new app.InfoDenuncia({},denuncia));
+		map.addControl(new app.ImagenesDenuncia({},denuncia));
+		map.addControl(new app.ComentariosDenuncia({}, denuncia, user));
 		map.addControl(new app.LikeDenuncia());
 
 		num_denuncias_io.emit('alguien_vio_una_denuncia', {id_denuncia: '#{denuncia.gid}'});
@@ -135,13 +93,15 @@ block script
 		var likes_html = '<div class="container" style="width: 100%"><div class="col-lg-12">';
 		
 		var usuarios_like = JSON.parse('!{JSON.stringify(denuncia.likes)}');
+		if (usuarios_like)
+			usuarios_like.forEach(function(usuario){
+				likes_html += '<a data-toggle="bottom" title="Usuario" data-content="' + usuario.profile.username + '" href="/app/usuarios/' + usuario._id + '" style="float:left; margin: 2px;"><img style="width: 80px; height: 80px;" src="' + usuario.profile.picture + '" class="img img-thumbnail"></img></a>';
+			});
 
-		usuarios_like.forEach(function(usuario){
-			likes_html += '<a data-toggle="bottom" title="Usuario" data-content="' + usuario.profile.username + '" href="/app/usuarios/' + usuario._id + '" style="float:left; margin: 2px;"><img style="width: 80px; height: 80px;" src="' + usuario.profile.picture + '" class="img img-thumbnail"></img></a>';
-		});
 		likes_html += '</div></div>';
 		
-		$('#likes').click(function(e){
+		function quienLike(){
+			console.log('a quien le gusta');
 			BootstrapDialog.show({
 				title: 'Esta denuncia le gusta a...',
 				message: likes_html,
@@ -153,6 +113,6 @@ block script
 					});
 				}
 			});
-		});
+		};
 		
 	script(src="/javascripts/openlayers/olvisor.js")
